<resources>
    <string name="app_name">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="activity_login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Exercise">Exercise</string>
    <string name="MealPlanner">MealPlanner</string>
    <string name="Health">Health</string>
    <string name="Calendar">Calendar</string>
    <string name="weight_if_applicable">weight_if_applicable</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="workout_type">Workout Type</string>
    <string name="amount_of_sets">amount_of_sets</string>
    <string name="amount_of_reps">amount_of_reps</string>
    <string name="weight">weight</string>
    <string name="workout_planner">workout_planner</string>
    <string name="workout">Workout</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="research">Research</string>
    <string name="calendar">Calendar</string>
    <string name="bench_press">Bench Press</string>
    <string name="pounds">135 lbs</string>
    <string name="number_reps">10 Reps</string>
    <string name="number_sets">4 Sets</string>
    <string name="today_workout">Today\'s Workout</string>
    <string name="date">February 20th \, 2024</string>
    <string name="today_meal_plan">Today\'s Meal Plan</string>
    <string name="today_research">Today\'s Research</string>
    <string name="headline">This is a really cool headline and breakthrough discovery that you have to see</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_build_info">BuildInfoActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
</resources>