<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/Exercise" />
        <item
            android:id="@+id/nav_meal_planner"
            android:icon="@drawable/ic_planner_2"
            android:title="@string/MealPlanner" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/Health" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_2"
            android:title="@string/Calendar" />
    </group>
</menu>